--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,3 +2,44 @@
     display: grid;
     text-decoration: none;
   }
+
+  .toDo {
+    margin-top: 2rem;
+    display: grid;
+    justify-items: center;
+    background-color: green;
+    border-radius: 10px;
+    width: 400px;
+    box-shadow: 5px 5px 5px #999;
+  }
+  
+  .add-todo {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 60%;
+    padding-bottom: 15px;
+  }
+  
+  .add-todo input,
+  button {
+    border-radius: 10px;
+    border: none;
+    outline: none;
+  }
+  
+  .add-todo ::placeholder {
+    padding: 4px;
+  }
+  
+  .todo-item {
+    display: flex;
+    align-items: center;
+    width: 60%;
+  }
+  
+  .done {
+    color: black;
+    text-decoration: line-through;
+  }
+  
